k8s/apps/media-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-tracker-app
  namespace: default
  labels:
    app: media-tracker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-tracker-app
  template:
    metadata:
      labels:
        app: media-tracker-app
    spec:
      containers:
        - name: app
          image: socknot1000kg/media-tracker-backend:main-95085ae
          imagePullPolicy: Always
          ports:
            - containerPort: 5000 # app's internal port
